--- a/TraSua/Views/lib/css/W3/W3.css
+++ b/TraSua/Views/lib/css/W3/W3.css
@@ -225,3 +225,6 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}*/
 .w3-transition-all-half-second{transition: all, 0.5s}
 .w3-hover-scale-with-transition:hover{transform: scale(1.1,1.1);transition: all, 0.5s}
 .w3-margin-0{margin:0px!important}
+.w3-modal-content-fixed {
+	margin:auto;background-color:#fff;position:relative;padding:0;outline:0;width:600px;
+}
