--- a/TraSua/Views/lib/css/admin-masterpage.css
+++ b/TraSua/Views/lib/css/admin-masterpage.css
@@ -24,3 +24,15 @@
 .nav-list > li > a:hover {
 	background-color: #444444;
 }
+
+.dropdown-submenu {
+	position: relative;
+}
+.dropdown-submenu .submenu-title {
+	outline: none;
+}
+.dropdown-submenu .dropdown-menu {
+	top        : 0;
+	left       : 100%;
+	margin-top : -1px;
+}
